# probabilistic-agent-framework

./: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
agent_arena/: __init__.py  arena.py  benchmark.py  cli.py  datasets.py
agents/: __init__.py  critic_agent.py  learner_agent.py  planner_agent.py  react_agent.py
api/: server.py  trace_api.py
benchmarks/: active_inference_agent.py  react_agent.py  standard_agent.py
config/: benchmark_config.yaml
docs/: dashboard_demo_placeholder.md
environment/: tool_environment.py
evaluation/: benchmark_runner.py  harness.py  metrics.py
experiments/: arena.py  compare_agents.py  evaluate_metrics.py  generate_dataset.py  generate_report.py  generate_visualizations.py  run_agent.py  run_agent_arena.py  run_benchmark.py  run_rag_eval.py
llm/: mock_llm.py  observation_parser.py
logging/: run_logger.py
models/: pomdp_model.py  state_space.py
rag_eval/: pyproject.toml
rag_eval/datasets/: qa_dataset.json
rag_eval/experiments/: run_rag_eval.py
rag_eval/src/rag_eval/: __init__.py  evaluator.py  generator.py  metrics.py  retriever.py
scripts/: replay_trace.py
tests/: test_agent_comparison.py  test_agents.py  test_api.py  test_arena.py  test_benchmark_runner.py  test_data_generation.py  test_distributed_runner.py  test_evaluation.py  test_failure_analyzer.py  test_failure_taxonomy.py  test_judges.py  test_metrics.py  test_observability.py  test_package_api.py  test_planner.py  test_rag_eval.py  test_react_baseline.py  test_reasoning_visualizations.py  test_replay.py  test_tools.py  test_trace_graph.py  test_visualization.py
tools/: calculator.py  retriever.py  tool_schema.py
ui/: agent_comparison.html  agent_comparison.js  arena.html  dashboard.html  dashboard.js  (+5 more)
(+72 files in other folders)
