[project]
name = "agent-arena-rag-eval"
version = "0.1.0"
description = "Deterministic RAG evaluation harness for Agent Arena"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_eval*"]
